--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "Profil 1": {
       "commandName": "Executable",
-      "executablePath": "C:\\Users\\Alicja\\Downloads\\Godot_v4.2-dev4_mono_win64\\Godot_v4.2-dev4_mono_win64\\Godot_v4.2-dev4_mono_win64_console.exe",
+      "executablePath": "C:\\Godot_v4.2-dev4_mono_win64\\Godot_v4.2-dev4_mono_win64_console.exe",
       "commandLineArgs": "--path . --verbose",
       "workingDirectory": ".",
       "nativeDebugging": true
