Kolejne zmiany w git-ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ android/
 *.apk.idsig
 *c8732008-73d9-44c3-be78-f3bc0c5a4f61.vsidx
 *.suo
+*.dtbcache.v2
+*projekt grupowy.projects.v7.bin
+*projekt grupowy.metadata.v7.bin
+*futdcache.v2
